--- a/src/css/component/with-loading.component.scss
+++ b/src/css/component/with-loading.component.scss
@@ -1,7 +1,3 @@
-:host {
-	overflow: auto;
-}
-
 .content {
 	display: flex;
 	flex-direction: column;
